Changes: Heading. Add: description

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
     <body>
         <header>
-            <h1>Titulo de prueba</h1>
+            <h1>Cambio en titulo de prueba</h1>
         </header>
         <main>
-            <p>Pagina de prueba</p>
+            <p>Pagina de prueba: Cambios realizados para probar la utilización de Git para edición local de repositorios alojados en GitHub</p>
         </main>
         <footer>
             &copy; 2023 Emanuel B.
