add a conflicting merge

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         </header>
         <main>
             <p>Pagina de prueba: Cambios realizados para probar la utilización de Git en la edición local de repositorios alojados en GitHub</p>
+            <p>Prueba de conflicto de fusión (merge conflict)</p>
         </main>
         <footer>
             &copy; 2023 Emanuel B.
