--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <body>
         <header>
-            <h1>Cambio en titulo de prueba: nueva edición</h1>
+            <h1>Cambio en titulo de prueba</h1>
         </header>
         <main>
             <p>Pagina de prueba: Cambios realizados para probar la utilización de Git en la edición local de repositorios alojados en GitHub</p>
