Agregados: hoja de estilos y archivos html

--- a/search/index.html
+++ b/search/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+	<link rel="stylesheet" href="g_style.css">
         <title>Search</title>
     </head>
+
     <body>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+	<header>
+	 <a href = "/image_search.html">Image Search </a>
+	 <a href = "/advance_search.html"> Advance Search </a>
+	</header>
+	<div class = "search_box">
+         <form action="https://www.google.com/search">
+          <input class = "search_bar" type="text" name="q"> <!-- Barra de busqueda -->
+          <br><br>
+	  <input class = "search_button" type="submit" value="Google Search"> <!-- Boton de busqueda -->
+	 </form>
+	</div>
     </body>
+
 </html>
