Avances en image_search.html

--- a/search/index.html
+++ b/search/index.html
@@ -7,8 +7,8 @@
 
     <body>
 	<header>
-	 <a href = "/image_search.html">Image Search </a>
-	 <a href = "/advance_search.html"> Advance Search </a>
+	 <a href = "image_search.html">Google Image Search </a>
+	 <a href = "advance_search.html"> Google Advance Search </a>
 	</header>
 	<div class = "search_box">
          <form action="https://www.google.com/search">
